--- a/GoLTWeb/index.html
+++ b/GoLTWeb/index.html
@@ -1,99 +1,149 @@
 <!doctype html>
 <html>
 <head>
-<title>GoLT with WebGL shader</title>
+  <title>GoLT with WebGL shader</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div>
-  <button id="prev">prev</button>
-  <button id="next">next</button>
-  <input id="interval" type="number" style="width: 60px" value="50" />
-  <span id="timer" style="width: 120px; display: inline-block;">&nbsp;</span>
-  <button id="play">play</button>
-  <button id="pause">pause</button>
-  <span id="generation">&nbsp;</span>
- <!--  <label>
-    <input id="render-active" type="checkbox" checked autocomplete="off"> active
-  </label>
-  <label>
-    <input id="render-age" type="checkbox" checked autocomplete="off"> age
-  </label>
-  <label>
-    <input id="render-neighbours" type="checkbox" checked autocomplete="off"> neighbours
-  </label> -->
-  <div id="info">&nbsp;</div>
-</div>
-<canvas style="width: 400px; height: 400px; image-rendering: pixelated"></canvas>
 
-<script src="utils.js"></script>
-<script src="debug-viewer.js"></script>
-<script src="viewer.js"></script>
-<script src="viridis.js"></script>
-<script src="ca.js"></script>
+  <canvas></canvas>
 
+  <div class="control" id="settings">
+    <span>X: <input id="xresolution" type="number" style="width: 60px" value="192"/> px&nbsp;&nbsp;</span>
+    <span>Y: <input id="yresolution" type="number" style="width: 60px" value="108"/> px&nbsp;&nbsp;</span>
+    <span>Array X: <input id="xmult" type="number" style="width: 50px" value="1"/>x&nbsp;&nbsp;</span>
+    <span>Array Y: <input id="ymult" type="number" style="width: 50px" value="1"/>x&nbsp;&nbsp;</span>
+    <br>
+    <span>Speed: <input id="interval" type="number" style="width: 40px" value="50"/> ms&nbsp;&nbsp;</span>
+    <span>Birth at: <input id="birth" type="string" style="width: 90px" value="1, 2, 3, 4, 5"/>&nbsp;&nbsp;</span>
+    <span>Death at: <input id="death" type="string" style="width: 90px" value="3"/>&nbsp;&nbsp;</span>
+    <span>Natural Death at: <input id="ndeath" type="number" style="width: 60px" value="50"/>&nbsp;&nbsp;</span>
+    <br>
+    <span>Color palette:
+      <select id="colormap" style="width: 90px">
+        <option value="jet" selected>jet</option>
+        <option value="viridis">viridis</option>
+      </select>&nbsp;&nbsp;
+    </span>
+    <span>Reverse? <input id="reverse" style="width: 15px; height: 15px;" type="checkbox">&nbsp;&nbsp;</span>
+    <br>
+    <br>
+    <button id="creategame">Create Game</button>
+  </div>
+   
+  <div class="control" id="info">
+    <button id="prev">prev</button>
+    <button id="pause">pause</button>
+    <button id="play">play</button>
+    <button id="next">next</button>
+    <span id="timer" style="width: 120px; display: inline-block;">&nbsp;</span>
+    <span id="generation">&nbsp;</span>
+   <!--  <label>
+      <input id="render-active" type="checkbox" checked autocomplete="off"> active
+    </label>
+    <label>
+      <input id="render-age" type="checkbox" checked autocomplete="off"> age
+    </label>
+    <label>
+      <input id="render-neighbours" type="checkbox" checked autocomplete="off"> neighbours
+    </label> -->
+    <div id="info">&nbsp;</div>
+  </div>
 
-<script>
-  function squareSeed(board, width, height) {
-    for(let i = 5; i < height - 5; i++) {
-      for (let j = 5; j < width - 5; j++) {
-        board[(i*width+j)*4] = 255;
+  <script src="utils.js"></script>
+  <script src="js-colormaps.js"></script>
+  <script src="debug-viewer.js"></script>
+  <script src="viewer.js"></script>
+  <!-- <script src="viridis.js"></script> -->
+  <script src="ca.js"></script>
+
+  <script>
+    function squareSeed(board, width, height) {
+      for(let i = 5; i < height - 5; i++) {
+        for (let j = 5; j < width - 5; j++) {
+          board[(i*width+j)*4] = 255;
+        }
       }
     }
-  }
 
-  function randomSeed(density) {
-    return function(board, width, height) {
-      for (let i = 0; i < height; i++) {
-        for (let j = 0; j < width; j++) {
-          if (Math.random() < density) {
-            board[(i*width+j)*4] = 255;
+    function randomSeed(density) {
+      return function(board, width, height) {
+        for (let i = 0; i < height; i++) {
+          for (let j = 0; j < width; j++) {
+            if (Math.random() < density) {
+              board[(i*width+j)*4] = 255;
+            }
           }
         }
       }
     }
-  }
 
 
-  window.onload = function() {
-    const canvas = document.querySelector('canvas');
-    const ca = new CellularAutomaton(100, 100, [1,2,3,4,5], [3], 25, 20, squareSeed);
-    const viewer = new Viewer(canvas, ca, colormap_viridis);
-    // const viewer = new Viewer(canvas, ca, (val) => [val, 0, 0, 255]);
+    window.onload = function() {
+      const canvas = document.querySelector('canvas');
+      
+      document.querySelector('#creategame').onclick = () => {
 
-    const generationCount = document.querySelector('#generation');
-    ca.onGenerationChanged = (generation) => {
-      generationCount.innerHTML = generation;
-      const avg = Math.round(viewer.total_duration/generation);
-      timer.innerHTML = `${viewer.last_render_duration} (${avg})`;
-    };
+        const x = document.querySelector('#xresolution').value;
+        const y = document.querySelector('#yresolution').value;
+        const mx = document.querySelector('#xmult').value;
+        const my = document.querySelector('#ymult').value;
 
-    const interval = document.querySelector('#interval');
+        const birth = document.querySelector('#birth').value.split(',').map(function(item) {
+            return parseInt(item, 10);
+        });
+        const death = document.querySelector('#death').value.split(',').map(function(item) {
+            return parseInt(item, 10);
+        });
+        const ndeath = document.querySelector('#ndeath').value;
+        const colormap = document.querySelector('#colormap').value;
+        const reverse = document.querySelector('#reverse').value === "on" ? true : false;
 
-    window.viewer = viewer;
-    viewer.render();
-    document.querySelector('#prev').onclick = () => viewer.prev();
-    document.querySelector('#next').onclick = () => viewer.next();
-    document.querySelector('#play').onclick = () => viewer.play(parseInt(interval.value));
-    document.querySelector('#pause').onclick = () => viewer.pause();
-    // document.querySelector('#render-active').onchange = (e) => viewer.setRenderActive(e.target.checked);
-    // document.querySelector('#render-age').onchange = (e) => viewer.setRenderAge(e.target.checked);
-    // document.querySelector('#render-neighbours').onchange = (e) => viewer.setRenderNeighbours(e.target.checked);
-    canvas.onclick = (e) => {
-      const rect = e.target.getBoundingClientRect();
-      const x = e.clientX - rect.left;
-      const y = e.clientY - rect.top;
-      const board_x = Math.floor(x / rect.width * ca.width);
-      const board_y = Math.floor(y / rect.height * ca.height);
-      const info = ca.getCell(board_x, board_y);
-      document.getElementById('info').innerHTML = `
-          x: ${board_x}, 
-          y: ${board_y}, 
-          active: ${info.active ? 'yes' : 'no'},
-          age: ${info.age},
-          neighbours: ${info.neighbours}`;
+        const ca = new CellularAutomaton(x, y, birth, death, ndeath, 20, squareSeed);
+        const viewer = new Viewer(canvas, ca, colormap, reverse, 0, 255);
+
+        // const viewer = new Viewer(canvas, ca, (val) => [val, 0, 0, 255]);
+
+        const generationCount = document.querySelector('#generation');
+        ca.onGenerationChanged = (generation) => {
+          generationCount.innerHTML = generation;
+          const avg = Math.round(viewer.total_duration/generation);
+          timer.innerHTML = `${viewer.last_render_duration} (${avg})`;
+        };
+
+        const interval = document.querySelector('#interval');
+
+        window.viewer = viewer;
+        viewer.render();
+
+        document.getElementById("settings").style.display="none";
+        document.getElementById("info").style.display="block";
+      }
+
+      document.querySelector('#prev').onclick = () => viewer.prev();
+      document.querySelector('#next').onclick = () => viewer.next();
+      document.querySelector('#play').onclick = () => viewer.play(parseInt(interval.value));
+      document.querySelector('#pause').onclick = () => viewer.pause();
+      
+      // document.querySelector('#render-active').onchange = (e) => viewer.setRenderActive(e.target.checked);
+      // document.querySelector('#render-age').onchange = (e) => viewer.setRenderAge(e.target.checked);
+      // document.querySelector('#render-neighbours').onchange = (e) => viewer.setRenderNeighbours(e.target.checked);
+
+      canvas.onclick = (e) => {
+        const rect = e.target.getBoundingClientRect();
+        const x = e.clientX - rect.left;
+        const y = e.clientY - rect.top;
+        const board_x = Math.floor(x / rect.width * ca.width);
+        const board_y = Math.floor(y / rect.height * ca.height);
+        const info = ca.getCell(board_x, board_y);
+        document.getElementById('info').innerHTML = `
+            x: ${board_x}, 
+            y: ${board_y}, 
+            active: ${info.active ? 'yes' : 'no'},
+            age: ${info.age},
+            neighbours: ${info.neighbours}`;
+      }
     }
-  }
-</script>
-
+  </script>
 </body>
 </html>
