--- a/GoLTWeb/index.html
+++ b/GoLTWeb/index.html
@@ -21,8 +21,89 @@
     <br>
     <span>Color palette:
       <select id="colormap" style="width: 90px">
-        <option value="jet" selected>jet</option>
-        <option value="viridis">viridis</option>
+        <option value=Accent>Accent</option>
+        <option value=Blues>Blues</option>
+        <option value=BrBG>BrBG</option>
+        <option value=BuGn>BuGn</option>
+        <option value=BuPu>BuPu</option>
+        <option value=CMRmap>CMRmap</option>
+        <option value=Dark2>Dark2</option>
+        <option value=GnBu>GnBu</option>
+        <option value=Greens>Greens</option>
+        <option value=Greys>Greys</option>
+        <option value=OrRd>OrRd</option>
+        <option value=Oranges>Oranges</option>
+        <option value=PRGn>PRGn</option>
+        <option value=Paired>Paired</option>
+        <option value=Pastel1>Pastel1</option>
+        <option value=Pastel2>Pastel2</option>
+        <option value=PiYG>PiYG</option>
+        <option value=PuBu>PuBu</option>
+        <option value=PuBuGn>PuBuGn</option>
+        <option value=PuOr>PuOr</option>
+        <option value=PuRd>PuRd</option>
+        <option value=Purples>Purples</option>
+        <option value=RdBu>RdBu</option>
+        <option value=RdGy>RdGy</option>
+        <option value=RdPu>RdPu</option>
+        <option value=RdYlBu>RdYlBu</option>
+        <option value=RdYlGn>RdYlGn</option>
+        <option value=Reds>Reds</option>
+        <option value=Set1>Set1</option>
+        <option value=Set2>Set2</option>
+        <option value=Set3>Set3</option>
+        <option value=Spectral>Spectral</option>
+        <option value=Wistia>Wistia</option>
+        <option value=YlGn>YlGn</option>
+        <option value=YlGnBu>YlGnBu</option>
+        <option value=YlOrBr>YlOrBr</option>
+        <option value=YlOrRd>YlOrRd</option>
+        <option value=afmhot>afmhot</option>
+        <option value=autumn>autumn</option>
+        <option value=binary>binary</option>
+        <option value=bone>bone</option>
+        <option value=brg>brg</option>
+        <option value=bwr>bwr</option>
+        <option value=cividis>cividis</option>
+        <option value=cool>cool</option>
+        <option value=coolwarm>coolwarm</option>
+        <option value=copper>copper</option>
+        <option value=cubehelix>cubehelix</option>
+        <option value=flag>flag</option>
+        <option value=gist_earth>gist_earth</option>
+        <option value=gist_gray>gist_gray</option>
+        <option value=gist_heat>gist_heat</option>
+        <option value=gist_ncar>gist_ncar</option>
+        <option value=gist_rainbow>gist_rainbow</option>
+        <option value=gist_stern>gist_stern</option>
+        <option value=gist_yarg>gist_yarg</option>
+        <option value=gnuplot>gnuplot</option>
+        <option value=gnuplot2>gnuplot2</option>
+        <option value=gray>gray</option>
+        <option value=hot>hot</option>
+        <option value=hsv>hsv</option>
+        <option value=inferno>inferno</option>
+        <option value=jet>jet</option>
+        <option value=magma>magma</option>
+        <option value=nipy_spectral>nipy_spectral</option>
+        <option value=ocean>ocean</option>
+        <option value=pink>pink</option>
+        <option value=plasma>plasma</option>
+        <option value=prism>prism</option>
+        <option value=rainbow>rainbow</option>
+        <option value=seismic>seismic</option>
+        <option value=spring>spring</option>
+        <option value=summer>summer</option>
+        <option value=tab10>tab10</option>
+        <option value=tab20>tab20</option>
+        <option value=tab20b>tab20b</option>
+        <option value=tab20c>tab20c</option>
+        <option value=terrain>terrain</option>
+        <option value=turbo>turbo</option>
+        <option value=twilight>twilight</option>
+        <option value=twilight_shifted>twilight_shifted</option>
+        <option value=viridis>viridis</option>
+        <option value=winter>winter</option>
       </select>&nbsp;&nbsp;
     </span>
     <span>Reverse? <input id="reverse" style="width: 15px; height: 15px;" type="checkbox">&nbsp;&nbsp;</span>
