--- a/GoLTWeb/index.html
+++ b/GoLTWeb/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>GoLT with WebGL shader</title>
+  <title>GoLTGen with WebGL shader</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
