implemented inverse logic

--- a/GoLTWeb/index.html
+++ b/GoLTWeb/index.html
@@ -207,7 +207,7 @@
         });
         const ndeath = document.querySelector('#ndeath').value;
         const colormap = document.querySelector('#colormap').value;
-        const reverse = document.querySelector('#reverse').value === "on" ? true : false;
+        const reverse = document.querySelector('#reverse').checked;
 
         const startCondition = document.querySelector('#startCondition').value;
         const mod = document.querySelector('#mod').value;
