--- a/GoLTWeb/index.html
+++ b/GoLTWeb/index.html
@@ -9,7 +9,7 @@
   <canvas></canvas>
 
   <div class="control" id="settings">
-    <h3>GoLTGen-Web</h3>
+    <h2>GoLTGen-Web</h2>
     <hr>
     <span><b>Board:&nbsp;</b></span>
     <span>Size X:&nbsp;
@@ -171,7 +171,7 @@
       &nbsp;%&nbsp;&nbsp;
     </span>
     <br style="margin-top:25px;">
-    <button id="createGame">Create Game</button>
+    <button id="createGame"><b>Create Game</b></button>
   </div>
    
   <div class="control" id="info">
