--- a/GoLTWeb/index.html
+++ b/GoLTWeb/index.html
@@ -169,6 +169,10 @@
       <input id="reverse" style="width: 15px; height: 15px;" type="checkbox" checked/>
       &nbsp;&nbsp;
     </span>
+    <span>Mirror:&nbsp;
+      <input id="mirror" style="width: 15px; height: 15px;" type="checkbox" checked/>
+      &nbsp;&nbsp;
+    </span>
     <span>Start (age):&nbsp;
       <input id="colorStart" type="number" style="width: 50px" value="0" placeholder="0"/>
       &nbsp;%&nbsp;&nbsp;
@@ -178,10 +182,54 @@
       <input id="colorStop" type="number" style="width: 50px" value="100" placeholder="100"/>
       &nbsp;%&nbsp;&nbsp;
     </span>
-    <br style="margin-top:25px;">
+    
     <button id="createGame"><b>Create Game</b></button>
   </div>
-   
+     
+  <div class="control" id="presets">
+    <h3>Presets</h3>
+    <hr>
+    <span>awa</span>
+  </div>
+
+  <div class="control" id="tutorial">
+    <h3>Tutorial</h3>
+    <hr>
+    <span>GoLTGen-Web or GoLTWeb is a webgl2 based Game of Life alike Cellular Automaton. This means that it presents you with a gamefield, rules that apply to a life, lifes, as in cells of the gamefield that are either alive or dead, a start condition and a mean of visualising the cells and their age.</span>
+    <hr>
+    <span><b>Board</b></span><br>
+    <span>The gamefield has to have a defined <b>size</b> in this Cellular Automaton, it can be set via Size X and Size Y. Since pixels within the game are square it may be set to a fraction of your monitors resolution, e.g. 192x108px for a full HD screen. It can both be interesting to set the resolution to a fairly low and fairly high number. You can also experient with different aspect ratios, just be aware that they might not fit your screen size.</span><br>
+    <span>To make the game more visually interesting multiple copies of the field can be displayed adjacent to each other via the <b>array</b> input. If set to e.g. 2x2 a total of four games will be displayed.</span>
+    <hr>
+    <span><b>Game</b></span><br>
+    <span>You can control the games <b>speed</b> by setting a fps, each frame represents 1 iteration. Feel free to go low with fps, it can be fun to see each iteration, usually the game maxes out at 60-90fps.</span>
+    <hr>
+    <span><b>Start Condition</b></span><br>
+    <span>To initiate a game there always needs to be a <b>start condition</b>, an empty gamefield usually does not make a game. This start condition is an image of living cells, a collection of cells that are alive with an age of 0. Those will then be susceptible to the rules defined in the next section. A set of condition generators is availble here, from squares, rectangles, circles, ovals, to arrays of thos (2x2 arrays) and random start conditions.</span><br>
+    <span>These conditions can furthermore be modified by changing their <b>"Size"</b>. With rectangles, squares, circles, ovals, rings and crosses it affects their size in pixels in the most literal sense. For the random generator it changes the density of living cells, where a lower number means more cells. For the vertical and horizontal bars it defines the number of lines.</span>
+    <hr>
+    <span>GoLTGen is for the most part a standard <a href="https://en.wikipedia.org/wiki/Cellular_automaton" target="_blank">Cellular Automaton</a> with the additions of a cells Age (from 0-255) and the Natural Death attribute (When does a cell naturally vanish?).</span><br>
+    <span><b>Rules</b></span><br>
+    <span>There are three basic sets of rules. When does a cell <b>Survive</b>? When does a cell get <b>born</b>? When does a cell <b>die naturally</b>? The first two rules are represented by a string of literals, e.g. "1, 2, 3", that represent how many neighbours have to be alive to meet this rules condition.</span><br>
+    <span>I.e. if the rules for <b>survival</b> are set to "1, 2, 3" then either 1, 2 or three neighbours have to be alive for the cell in question to survive another iteration. If no neighbouring cell is alive, then the cell in question will "starve" and die. If more than 2 neighbouring cells are alive, it will die of "overcrowdedness".</span><br>
+    <span>Similarly if a game has a ruleset of "1, 2" for <b>births</b> a cell will be born, switch from dead to alive when it has one or two neighbours that are alive. With no neighbour the cell will stay dead and with more then two neighbours the cell wont come to live due to "overcrowdedness".</span><br>
+    <span>Feel free to go crazy with these rules, even a ruleset of 1, 1 for survival, birth can result in an <i>interesting</i> game.</span><br>
+    <span>Last but not least the <b>natural death</b> rule, this is a more foreign one to typical cellular automaton implementations, it defines an age at which a cell will vanish naturally and even with otherwise perfectly fine survival conditions. This allows for more interesting games with otherwise static cellular automatons. The maximum age is 255 iterations, while a minimum age will cause the cells to never die, basically disabling this rule. For faster rulesets (e.g. 1, 1) you may choose an early natural death to better map the colour palette, while for many other rulesets a long lifetime might be desirable.</span>
+    <hr>
+    <span><b>Colors</b></span><br>
+    <span>To make this cellular automaton visually interesting we need to map some <b>colors</b> onto it. Since usually there are only two states to a cell, dead or alive, we have added a third state that gives us a more interesting view of a cell, its age! Our display is each cells age mapped onto a colour palette from matplotlib.</span><br>
+    <span>The colour-maps can be reversed by enabling <b>reverse</b></span><br>
+    <span>To give you some more control you can re-map each color palette better onto the cells lifetime by changing when in its lifetime the palette should start to change, and when it should stop to change. You can create some dead-banding with this and make the whole game visally less complex, more pleasing.</span>
+    <hr>
+    <span><b>Controls</b></span><br>
+    <span>For when you are in a game you can control it with your keyboard. A game will keep some history, allowing you to go back in time.</span><br>
+    <span>Press <kbd>space</kbd> to start or pause a game.</span><br>
+    <span>Press <kbd>arrow-right</kbd> to advance one iteration when the game is paused.</span><br>
+    <span>Press <kbd>arrow-left</kbd> to reverse one iteration when the game is paused.</span><br>
+    <span>Press <kbd>h</kbd> to hide the game-controls</span><br>
+    <span>Press <kbd>F5</kbd> to go back to this screen.</span><br>
+  </div>
+
   <div class="control" id="info">
     <button id="prev">prev</button>
     <button id="pause">pause</button>
@@ -189,6 +237,10 @@
     <button id="next">next</button>
     <span id="timer" style="width: 120px; display: inline-block;">&nbsp;</span>
     <span id="generation">&nbsp;</span>
+
+
+
+
 <!--
    <label>
       <input id="render-active" type="checkbox" checked autocomplete="off"> active
@@ -204,6 +256,7 @@
     <br>
     <span style="font-size: 14px;">press <kbd>h</kbd> to hide this menu </span>
   </div>
+
 
   <script src="utils.js"></script>
   <script src="js-colormaps.js"></script>
@@ -232,6 +285,7 @@
 
         const colormap = document.querySelector('#colormap').value;
         const reverse = document.querySelector('#reverse').checked;
+        const mirror = document.querySelector('#mirror').checked;
 
         const startCondition = document.querySelector('#startCondition').value;
         const mod = document.querySelector('#mod').value;
@@ -242,7 +296,7 @@
         const offscreen = new OffscreenCanvas(x, y);
 
         const ca = new CellularAutomaton(x, y, survive, birth, ndeath, 40, eval(startCondition), mod);
-        const viewer = new Viewer(offscreen, ca, colormap, reverse, mx, my, colorStart, colorStop);
+        const viewer = new Viewer(offscreen, ca, colormap, reverse, mirror, mx, my, colorStart, colorStop);
 
         //const dbgViewer = new DebugViewer(debug, offscreen, ca);
 
@@ -262,6 +316,8 @@
         //dbgViewer.render();
 
         document.getElementById("settings").style.display="none";
+        document.getElementById("tutorial").style.display="none";
+        document.getElementById("presets").style.display="none";
         document.getElementById("info").style.display="block";
       }
 
